# JustDictate

./: .gitignore  CLAUDE.md  JustDictate.spec  LICENSE  README.md  config_manager.py  dictation_engine.py  floating_window.py  icon.icns  install.sh  just_dictate.py  model_manager.py  parakeet_stt.py  pyproject.toml  run.sh
