[project]
name = "parakeet-stt"
version = "0.1.0"
description = "macOS speech-to-text using NVIDIA Parakeet TDT 0.6B v3"
requires-python = ">=3.11,<3.14"
dependencies = [
    "onnx-asr[cpu,hub]",
    "onnxruntime>=1.24.2",
    "sounddevice",
    "pynput",
    "numpy",
    "rumps",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
]
